fix code coverage

--- a/TODO
+++ b/TODO
@@ -1,2 +1,4 @@
-- add coverage
-- add saucelabs
+- add saucelabs instead of zool
+- build dist package for the browsers
+- generate map for debuggging
+
